# 2048_CLI_xplat_cpp_cmake

./: .gitmodules  CLIViewController.cpp  CLIViewController.h  CMakeLists.txt  README.md  main.cpp
